src/Startup/Rsp.IrasPortal/wwwroot/css/main.css
﻿@charset "UTF-8";
@import url("govuk-frontend.min.css");
.govuk-form-group.questions {
  border: solid 1px lightgrey;
  padding: 30px;
}

fieldset.sections {
  margin-bottom: 10px;
}

.govuk-fieldset__legend.govuk-fieldset__legend--l {
  margin-bottom: 0;
  color: #8f358f;
}

.progress-container {
  font-family: "GDS Transport", arial, sans-serif;
  display: flex;
  justify-content: space-between;
  margin: 20px 0;
}

.stage {
  text-align: center;
  flex: 1;
  position: relative;
}

.stage-label {
  display: block;
  margin-top: 8px;
  font-size: 0.9em;
}

.progress-line {
  height: 5px;
  background-color: gray;
  position: absolute;
  top: 8%;
  left: 0;
  width: 100%;
  z-index: 0;
}

.stage-circle {
  width: 20px;
  height: 20px;
  background-color: #ffc300;
  border-radius: 50%;
  margin: 0 30px;
  position: relative;
  z-index: 1;
  margin-right: 10px;
}

.stage.active .stage-circle {
  background-color: #1d70b8;
}

.stage.completed .stage-circle {
  background-color: #00703c;
}

.stage.active .stage-label,
.stage.completed .stage-label {
  font-weight: bold;
}

button.govuk-link {
  font-family: "GDS Transport", arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-decoration: underline;
  text-decoration-thickness: max(1px, 0.0625rem);
  text-underline-offset: 0.1578em;
  border: 0;
  background-color: transparent;
}

.save-buttons {
  display: flex;
  gap: 15px;
}

.research-panel {
  padding-top: 20px;
  padding-bottom: 0px;
  padding-left: 20px;
  padding-right: 20px;
  text-align: left;
  border-color: lightgray;
  border-width: 2px;
}

.research-text {
  margin: 0;
}

.govuk-button-hyperlink {
  background: none;
  border: 0;
  color: #0d6efd;
  text-decoration: underline;
}
.govuk-button-hyperlink:hover {
  color: #0a58ca;
}

.role-checkbox {
  text-transform: capitalize;
}

.govuk-table__header-sortable {
  color: #1D70B8;
  white-space: nowrap;
}

.govuk-pagination {
  margin-bottom: 0;
}

.float-right {
  float: right;
}

.text-capitalize {
  text-transform: capitalize;
}

.govuk-pagination__results {
  font-family: GDS Transport, arial, sans-serif;
  margin-top: 0;
  padding: 5px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.25;
  float: right;
}

.text-capitalize {
  text-transform: capitalize;
}

.govuk-link-button {
  background: none;
  border: none;
  color: #1d70b8;
  text-decoration: underline;
  cursor: pointer;
  font: inherit;
  padding: 0;
  text-underline-offset: 0.1578em;
}
.govuk-link-button:hover {
  color: #003078;
  text-decoration-thickness: max(3px, 0.1875rem, 0.12em);
  -webkit-text-decoration-skip-ink: none;
  text-decoration-skip-ink: none;
  -webkit-text-decoration-skip: none;
  text-decoration-skip: none;
}
.govuk-link-button:focus {
  outline: 3px solid transparent;
  background-color: #fd0;
  box-shadow: 0 -2px #fd0, 0 4px #0b0c0c;
  text-decoration: none;
  -webkit-box-decoration-break: clone;
  box-decoration-break: clone;
  color: #0b0c0c;
}

.govuk-back-link-button {
  font-size: 0.875rem;
  line-height: 1.1428571429;
  font-family: GDS Transport, arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-decoration: underline;
  text-decoration-thickness: max(1px, 0.0625rem);
  text-underline-offset: 0.1578em;
  display: inline-block;
  position: relative;
  margin-top: 15px;
  margin-bottom: 15px;
  padding-left: 0.875em;
  color: #0b0c0c;
  background: none;
  border: none;
}

@media (min-width: 40.0625em) {
  .govuk-back-link-button {
    font-size: 1rem;
    line-height: 1.25;
  }
}
@media print {
  .govuk-back-link-button {
    font-size: 14pt;
    line-height: 1.2;
    font-family: sans-serif;
  }
}
.govuk-back-link-button:hover {
  text-decoration-thickness: max(3px, 0.1875rem, 0.12em);
  -webkit-text-decoration-skip-ink: none;
  text-decoration-skip-ink: none;
  -webkit-text-decoration-skip: none;
  text-decoration-skip: none;
}

.govuk-back-link-button:focus {
  outline: 3px solid transparent;
  color: #0b0c0c;
  background-color: #fd0;
  box-shadow: 0 -2px #fd0, 0 4px #0b0c0c;
  text-decoration: none;
  -webkit-box-decoration-break: clone;
  box-decoration-break: clone;
}

.govuk-back-link-button:link, .govuk-back-link-button:visited {
  color: #0b0c0c;
}

@media print {
  .govuk-back-link-button:link, .govuk-back-link-button:visited {
    color: #000;
  }
}
.govuk-back-link-button:hover {
  color: rgba(11, 12, 12, 0.99);
}

.govuk-back-link-button:active, .govuk-back-link-button:focus {
  color: #0b0c0c;
}

@media print {
  .govuk-back-link-button:active, .govuk-back-link-button:focus {
    color: #000;
  }
}
.govuk-back-link-button:before {
  content: "";
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0.1875em;
  width: 0.4375em;
  height: 0.4375em;
  margin: auto 0;
  transform: rotate(225deg);
  border: solid;
  border-width: 1px 1px 0 0;
  border-color: #505a5f;
}

@supports (border-width: max(0px)) {
  .govuk-back-link-button:before {
    border-width: max(1px, 0.0625em) max(1px, 0.0625em) 0 0;
    font-size: max(16px, 1em);
  }
}
.govuk-back-link-button:focus:before {
  border-color: #0b0c0c;
}

.govuk-back-link-button:after {
  content: "";
  position: absolute;
  top: -14px;
  right: 0;
  bottom: -14px;
  left: 0;
}

.govuk-back-link-button--inverse:link, .govuk-back-link-button--inverse:visited {
  color: #fff;
}

.govuk-back-link-button--inverse:active, .govuk-back-link-button--inverse:hover {
  color: hsla(0, 0%, 100%, 0.99);
}

.govuk-back-link-button--inverse:focus {
  color: #0b0c0c;
}

.govuk-back-link-button--inverse:before {
  border-color: currentcolor;
}

.line-break-anywhere {
  line-break: anywhere;
}

.govuk-table--name {
  width: 16%;
}

.govuk-table--email {
  width: 25%;
}

.govuk-table-wrapper {
  overflow-x: auto;
}

.govuk-table-users {
  min-width: 550px;
}
/* ... */

